[package]
name = "sl-core"
version = "0.1.0"
edition = "2021"

description = "A set of helpers and functions used in several libraries / apps."
license = "MIT"

authors = [ "Robert Anderson" ]
homepage = "https://me.shiftylogic.dev"
repository = "https://github.com/shiftylogic/rust-mono/crates/sl-core"


[features]
default = []
alloc-count = []
alloc-trace = ["dep:backtrace"]


[dependencies]
log = { version = "0.4.17", default-features = false }
backtrace = { version = "0.3", optional = true }

