[package]
name = "play"
version = "0.1.0"
edition = "2021"

description = "Learning Playground"
license = "MIT"

authors = [ "Robert Anderson" ]
homepage = "https://me.shiftylogic.dev"
repository = "https://github.com/shiftylogic/rust-mono/demos/play"


[dependencies]
log = { version = "0.4.17", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
fastrand = "1.9"

[dependencies.sl-core]
version = "=0.1.0"
path = "../../crates/sl-core"
features = ["alloc-count"]

